# packages/admin-client/openapi/admin.openapi.json
@@ -5131,6 +5131,55 @@
       }
     },
     "/admin/v1/tenants/{tenant_id}/integration-connections/{connection_id}": {
+      "delete": {
+        "operationId": "delete_connection_admin_v1_tenants__tenant_id__integration_connections__connection_id__delete",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "tenant_id",
+            "required": true,
+            "schema": {
+              "format": "uuid",
+              "title": "Tenant Id",
+              "type": "string"
+            }
+          },
+          {
+            "in": "path",
+            "name": "connection_id",
+            "required": true,
+            "schema": {
+              "format": "uuid",
+              "title": "Connection Id",
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Successful Response"
+          },
+          "422": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            },
+            "description": "Validation Error"
+          }
+        },
+        "security": [
+          {
+            "AdminToken": []
+          }
+        ],
+        "summary": "Delete Connection",
+        "tags": [
+          "admin:integrations"
+        ]
+      },
       "patch": {
         "operationId": "update_connection_admin_v1_tenants__tenant_id__integration_connections__connection_id__patch",
         "parameters": [
